--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,5 +24,6 @@
   "bugs": {
     "url": "https://github.com/sdasdsad2/back-naturate-app/issues"
   },
-  "homepage": "https://github.com/sdasdsad2/back-naturate-app#readme"
+  "homepage": "https://github.com/sdasdsad2/back-naturate-app#readme",
+  "description": ""
 }
