--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.12"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sdasdsad2/back-naturate-app.git"
